clang/test/BSC/Negative/InitAnalysis/init-ensure-init-if-ret-badret-redecl.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
//
// The bad-return-type error is emitted once across redeclarations:
// CheckBSCEnsureInitIfRetOnFunctionDecl runs after the redeclaration chain is
// linked and skips a decl whose earlier redeclaration already carried the
// attribute, so the prototype+definition pair below reports a single error
// (on the prototype).

float foo(int *__attribute__((ensure_init_if_ret(0))) out); // expected-error {{requires an integer or '_Bool' return type, but function returns 'float'}}
float foo(int *__attribute__((ensure_init_if_ret(0))) out) { *out = 1; return 0.0f; }
